2004-11-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gamemine.c, main/piggy.c: compile again on older C compilers
	* main/polyobj.c: don't corrupt model_data, so it can be freed properly

2004-11-16  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/carbon/findfile.c: fix Mac OS 9 bug with missions > 12 chars

2004-11-14  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/ogl/ogl.c: make Mac OS 9 Voodoo display textures
	* arch/ogl/ogl.c: make Mac OS X OpenGL verify textures

2004-10-30  Martin Schaffner  <maschaffner@gmx.ch>

	* main/gamemine.c, main/piggy.c: read descent 1 textures also from
	shareware version of descent.hog. This is not yet bug-free

2004-10-30  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/network.c: fix crash introduced with previous change

2004-10-24  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gameseq.c, main/gameseq.h, main/mission.c, main/mission.h,
	main/titles.c, main/titles.h: move all mission stuff to mission.{c,h},
	make mission structre memory allocated

2004-10-23  Martin Schaffner  <maschaffner@gmx.ch>

	* main/Makefile.am, main/inferno.c, main/credits.c, main/endlevel.c,
	main/bmread.c, main/titles.c, main/compbit.h, main/text.c,main/text.h,
	VisualC/d2x/d2x.dsp, VisualC/d2xgl/d2xgl.dsp, VisualCE/d2x/d2x.vcp:
	delete file compbit.h, move functionality to text.c, modify all
	previous users of compbit.h to use existing function in text.h
	* main/inferno.c: remove warning created by the fix for the cfgets
	issue of 2004-08-29
	* main/bmread.c: add comment

2004-10-23  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* cfile/cfile.c: declare variable on top of block
	* main/menu.c, main/mission.c, main/mission.h, main/multi.c,
	main/multi.h, main/network.c: move mission list handling functionality
	to mission.c, remove unnecessary load_mission calls in menu.c
	* main/game.c: remove unnecessary build_mission_list call
	* main/mission.c, main/mission.h: correct comments about anarchy-only