@@ -1,4 +1,4 @@
-/* $Id: mission.h,v 1.22 2004-10-24 12:46:49 schaffner Exp $ */
+/* $Id: mission.h,v 1.23 2004-11-19 18:42:48 schaffner Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -67,6 +67,7 @@ typedef struct {
 	char	filename[9];	// filename
 	ubyte	descent_version;	// descent 1 or descent 2?
 	bool	anarchy_only_flag;	// if true, mission is only for anarchy
+	ubyte	enhanced;	// 0: mission has "name", 1:"xname", 2:"zname"
 	int	builtin_hogsize;	// the size of the hogfile for a builtin mission, and 0 for an add-on mission
 	char	briefing_text_filename[FILENAME_LEN]; // name of briefing file
 	char	ending_text_filename[FILENAME_LEN]; // name of ending file
@@ -80,7 +81,6 @@ typedef struct {
 #if 0 //def EDITOR	Support for multiple levels, briefings etc open at once
 	Window	window;
 	Window	attributes;// Window for changing them
-	ubyte	enhanced;
 	void	*briefing;
 	void	*ending;
 	Level	*level[MAX_LEVELS_PER_MISSION];
